# vynnychanka-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: messages.toml
config/persona/: vynnychanka.md
src/bot/: app.py  config.py  di.py  limits.py  logging_setup.py  messages.py  ratelimit.py  runtime.py
src/bot/filters/: addressed.py  admin.py
src/bot/handlers/: admin.py  commands.py  errors.py  group.py
src/bot/middlewares/: throttle.py
src/bot/telegram/: formatting.py  identity.py  mentions.py
src/brain/: contract.py  gemini.py  langgraph.py  persona.py  retry.py
tests/: factories.py  test_addressed_filter.py  test_admin_filter.py  test_admin_handler_helpers.py  test_backend_contract.py  test_config.py  test_formatting.py  test_limits.py  test_mentions.py  test_messages.py  test_persona_loader.py  test_persona_store.py  test_ratelimit.py  test_retry.py
